Se guardan las relaciones entre ticket y tarea
